test/spec_vectors/table/ok/module_15.wat
(module (table 1 (ref null func) (ref.null func)))