test/spec_vectors/table/fail/module_25.wat
(module (table 1 (ref null func) (i32.const 0)))